--- a/packages/hook/package.json
+++ b/packages/hook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hook-package",
+  "name": "typedemitter-hook",
   "version": "0.0.1",
   "repository": {
     "type": "git",
@@ -19,17 +19,19 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@testing-library/react": "^9.3.2",
+    "@testing-library/react-hooks": "^3.7.0",
     "@types/jest": "^24.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
+    "react-test-renderer": "^17.0.1",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.2",
-    "@testing-library/react-hooks": "^3.7.0"
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "typedemitter": "^0.0.1"
   }
 }
