--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "typedemitter",
+  "name": "ayemitter",
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "git@github.com:lukasbach/typedemitter.git",
+    "url": "git@github.com:lukasbach/ayemitter.git",
     "directory": "packages/core"
   },
   "author": "Lukas Bach",
@@ -25,5 +25,6 @@
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
-  }
+  },
+  "gitHead": "c8c2fb8c2e197abd44b5a1342eec232b9e54e367"
 }
