--- a/packages/hook/package.json
+++ b/packages/hook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ayemitter-hook",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "repository": {
     "type": "git",
     "url": "git@github.com:lukasbach/ayemitter.git",
@@ -30,9 +30,9 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "ayemitter": "^1.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "ayemitter": "^1.0.0"
+    "react-dom": "^17.0.1"
   },
   "gitHead": "c8c2fb8c2e197abd44b5a1342eec232b9e54e367"
 }
